--- a/env/dev/docker/dockerfile/Dockerfile
+++ b/env/dev/docker/dockerfile/Dockerfile
@@ -1,6 +1,13 @@
 FROM centos:centos6
-RUN yum install -y gcc gcc-c++ make python-devel bunzip2 bzip2-devel zlib-devel libicu libicu-devel libXp libXt libXtst glibc-common glibc-devel glibc glibc-headers compat-glibc-headers compat-glibc glibc-static glibc-utils perl ncurses-devel libaio-devel numactl numactl-devel wget nc git openssl openssl-libs openssl-devel man epel-release check boost-devel asio-devel readline-devel pam-devel perl-Env time rpmdevtools rpm-build libcurl-devel \
-    && mkdir -p /soft/mysql && groupadd mysql && useradd -d /soft/mysql -r -g mysql -s /bin/bash mysql && chown -R mysql:mysql /soft/mysql
+RUN yum install -y gcc gcc-c++ make python-devel bunzip2 bzip2-devel zlib-devel libicu libicu-devel \
+    libXp libXt libXtst glibc-common glibc-devel glibc glibc-headers compat-glibc-headers compat-glibc \
+    glibc-static glibc-utils perl ncurses-devel libaio-devel numactl numactl-devel wget nc git openssl \
+    openssl-libs openssl-devel man epel-release check boost-devel asio-devel readline-devel pam-devel \
+    perl-Env time rpmdevtools rpm-build libcurl-devel dos2unix \
+    && mkdir -p /soft/mysql \
+    && groupadd mysql \
+    && useradd -d /soft/mysql -r -g mysql -s /bin/bash mysql \
+    && chown -R mysql:mysql /soft/mysql
 COPY gcc-4.8.5    /root/soft/gcc/gcc-4.8.5
 COPY cmake-3.11.4 /root/soft/cmake/cmake-3.11.4
 COPY bison-3.0.4  /root/soft/bison/bison-3.0.4
