--- a/env/dev/docker/dockerfile/Dockerfile
+++ b/env/dev/docker/dockerfile/Dockerfile
@@ -1,5 +1,5 @@
 FROM centos:centos6
-COPY dockerfile /root/dockerfiles/
+COPY dockerfiles /root/dockerfiles/
 RUN yum install -y gcc gcc-c++ make python-devel bunzip2 bzip2-devel zlib-devel libicu libicu-devel \
     libXp libXt libXtst glibc-common glibc-devel glibc glibc-headers compat-glibc-headers compat-glibc \
     glibc-static glibc-utils perl ncurses-devel libaio-devel numactl numactl-devel wget nc git openssl \
@@ -14,22 +14,22 @@ RUN yum install -y gcc gcc-c++ make python-devel bunzip2 bzip2-devel zlib-devel 
     && mkdir -p /soft/mysql \
     && groupadd mysql \
     && useradd -d /soft/mysql -r -g mysql -s /bin/bash mysql \
-    && cp -rf /root/dockerfile/gitignore /etc \
-    && cp -rf /root/dockerfile/bin /soft/mysql/ \
-    && cp -rf /root/dockerfile/gitconfig.sh /soft/mysql/bin/ \
-    && cp -rf /root/dockerfile/profileconfig.sh /soft/mysql/bin/ \
-    && cp -rf /root/dockerfile/bash_profile /soft/mysql/ \
-    && cp -rf /root/dockerfile/bashrc /soft/mysql/ \
+    && cp -rf /root/dockerfiles/gitignore /etc \
+    && cp -rf /root/dockerfiles/bin /soft/mysql/ \
+    && cp -rf /root/dockerfiles/gitconfig.sh /soft/mysql/bin/ \
+    && cp -rf /root/dockerfiles/profileconfig.sh /soft/mysql/bin/ \
+    && mv /root/dockerfiles/bash_profile /soft/mysql/.bash_profile \
+    && mv /root/dockerfiles/bashrc /soft/mysql/.bashrc \
     && mkdir -p /soft/mysql/.ssh/ \
-    && cp -rf /root/dockerfile/ssh/* /soft/mysql/.ssh/ \
+    && cp -rf /root/dockerfiles/ssh/* /soft/mysql/.ssh/ \
     && chown -R mysql:mysql /soft/mysql \
     && chmod -R 755 /soft/mysql/bin/ \
     && sh /soft/mysql/bin/gitconfig.sh \
     && chmod 600 /soft/mysql/.ssh/id_rsa \
-    && cd /root/dockerfile/3rd/bison/bison-3.0.4 \
+    && cd /root/dockerfiles/3rd/bison/bison-3.0.4 \
     && ./configure --prefix="/usr/" \
     && make -j$(getconf _NPROCESSORS_ONLN) && make install \
-    && cd /root/dockerfile/3rd/gcc/gcc-4.8.5 \
+    && cd /root/dockerfiles/3rd/gcc/gcc-4.8.5 \
     && ./contrib/download_prerequisites \
     && mkdir gcc-build \
     && cd gcc-build \
@@ -46,9 +46,9 @@ RUN yum install -y gcc gcc-c++ make python-devel bunzip2 bzip2-devel zlib-devel 
     && export LD_LIBRARY_PATH=/usr/local/lib:/usr/local/lib64:/usr/lib:/usr/lib64:/lib:/lib64:$LD_LIBRARY_PATH:. \
     && export LIBRARY_PATH=/usr/local/lib:/usr/local/lib64:/usr/lib:/usr/lib64:/lib:/lib64:$LIBRARY_PATH:. \
     && export CPLUS_INCLUDE_PATH=/usr/include:/usr/local/include/gtest:$CPLUS_INCLUDE_PATH:. \
-    && cd /root/dockerfile/3rd/cmake/cmake-3.11.4 \
+    && cd /root/dockerfiles/3rd/cmake/cmake-3.11.4 \
     && ./bootstrap \
     && make -j$(getconf _NPROCESSORS_ONLN) \
     && make install \
-    && rm -rf /root/soft/gcc \
+    && rm -rf /root/dockerfiles/3rd/gcc \
     && yum clean packages
