--- a/env/dev/docker/dockerfile/Dockerfile
+++ b/env/dev/docker/dockerfile/Dockerfile
@@ -4,7 +4,7 @@ RUN yum install -y gcc gcc-c++ make python-devel bunzip2 bzip2-devel zlib-devel 
     libXp libXt libXtst glibc-common glibc-devel glibc glibc-headers compat-glibc-headers compat-glibc \
     glibc-static glibc-utils perl ncurses-devel libaio-devel numactl numactl-devel wget nc git openssl \
     openssl-libs openssl-devel man epel-release check boost-devel asio-devel readline-devel pam-devel \
-    perl-Env time rpmdevtools rpm-build libcurl-devel dos2unix tree sudo rsyslog \
+    perl-Env time rpmdevtools rpm-build libcurl-devel dos2unix tree sudo rsyslog cloc \
     && chmod -R 777 /tmp \
     && echo "Defaults logfile=/var/log/sudo.log" >> /etc/sudoers \
     && echo "local2.debug /var/log/sudo.log" >> /etc/rsyslog.conf \
