update docker file and cmake file

--- a/test/ut/gdemo/CMakeLists.txt
+++ b/test/ut/gdemo/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 2.8)
-PROJECT(google-test-demo)
+PROJECT(ericsql-tools)
 find_package(GTest REQUIRED)
 include_directories(${GTEST_INCLUDE_DIRS})
 add_executable(gdemo test/gtest_demo.cc)
