--- a/env/dev/docker/data/demo/rpldemo/rpldemo1.cnf
+++ b/env/dev/docker/data/demo/rpldemo/rpldemo1.cnf
@@ -60,7 +60,11 @@ slave_preserve_commit_order=1
 master_info_repository=TABLE
 relay_log_info_repository=TABLE
 relay_log_recovery=ON
+#semi sync
+plugin-load=rpl_semi_sync_master=semisync_master.so
+loose-rpl-semi-sync-master-timeout=100
+loose-rpl_semi_sync_master_enabled=ON
+loose-rpl_semi_sync_slave_enabled=OFF
 
 [client]
 default-character-set = utf8
-
